--- a/index.html
+++ b/index.html
@@ -90,12 +90,16 @@
                 <span class="fui-export"> </span>
                 <h6>Creating Access to Your Data for You</h6>
 
-                <p>Small Data is the myriad of data traces we each generate everyday. Unfortunately, that data is often unavailable to us in a form that we can make sense of or act upon. Imagine a special kind of app running in the cloud that privately and securely turns your small data into big insights.</p>
+                <p>
+                    Small Data is the myriad of data traces we each generate everyday. Unfortunately, that data is often unavailable to us in a form that we can make sense of or act upon. Imagine a special kind of app running in the cloud that privately and securely turns your small data into big insights.
+                </p>
             </div>
             <div class="col-sm-4 col-sm-offset-1">
                 <span class="fui-loop"> </span>
                 <h6>Open-Source and Modular</h6>
-                <p>We've designed our infrastructure and apps to be modular and reusable so that they can be remixed and repurposed for new services and platform architectures. And everything down to the front-end UIs of our small data apps are Open Source. Fork away.</p>
+                <p>
+                    We've designed our infrastructure and apps to be modular and reusable so that they can be remixed and repurposed for new services and platform architectures. And everything down to the front-end UIs of our small data apps are Open Source. Fork away.
+                </p>
           	</div>
         </div>
         <div class="row features">
@@ -103,13 +107,17 @@
                 <span class="fui-new"> </span>
                 <h6>Developed Through Applied Research</h6>
 
-                <p>We're not just building tools and services for theoretical use cases and "what if?" scenarios. Through our collaborations with researchers spanning behavioral economics, healthcare, human computer interaction and policy we iteratively develop and evolve our services to address issues and problems in the real-world.</p>
+                <p>
+                    We're not just building tools and services for theoretical use cases and "what if?" scenarios. Through our collaborations with researchers spanning behavioral economics, healthcare, human computer interaction and policy we iteratively develop and evolve our services to address issues and problems in the real-world.
+                </p>
             </div>
             <div class="col-sm-4 col-sm-offset-1">
                 <span class="fui-user"> </span>
                 <h6>Human-Centered</h6>
 
-              	<p>We're going beyond recommendation engines to services that contextually parse your small data to provide the right insights at the right time,  to help you make (hopefully) the right decision. And as for the data that drives these insights, we take the utmost care and precaution with regards to its security while advancing architectural frameworks that maximize transparency and individual control of small data usage.</p>
+              	<p>
+                    We're going beyond recommendation engines to services that contextually parse your small data to provide the right insights at the right time,  to help you make (hopefully) the right decision. And as for the data that drives these insights, we take the utmost care and precaution with regards to its security while advancing architectural frameworks that maximize transparency and individual control of small data usage.
+                </p>
           </div>
         </div>
     </div>
@@ -258,7 +266,8 @@
             <div class="col-sm-6">
                 <h3><a href="https://newsfie.org">Newsfie</a></h3>
 
-                <p>Newsfie is a research prototype that enables instant news personalization using small data.
+                <p>
+                    Newsfie is a research prototype that enables instant news personalization using small data.
                     It recommends news articles based on users' tweets, facebook posts, email, slack communications, or Youtube watch history.
                     You can experience it with your own data, or see what Newfie recommends to other famous people, such
                     as Barack Obama, Bill Gates, Neil Patrick Harris, etc., based on their Twitter data. Also, make sure
@@ -284,7 +293,8 @@
             <div class="col-sm-6">
                 <h3><a href="http://getgrouplink.org">Grouplink</a></h3>
 
-                <p>GroupLink is a group event recommendation system that suggests events to promote group members’
+                <p>
+                    GroupLink is a group event recommendation system that suggests events to promote group members’
 
                     face-to-face interactions in non-work settings. GroupLink uses small data to
 
@@ -321,7 +331,9 @@
                 <h3><a href="http://www.trylimbr.com/">Limbr</a></h3>
                 <img src="startup/common-files/img/content/limbr-logo.png" class="img-responsive" style="height: 3em;">
 
-                <p>Limbr helps you to monitor your progress towards freedom from back pain and success to a healthier life. A suite of applications make it easy for you to follow your care plan, report your daily progress and set backs to your care team, and receive personalized coaching to give you the best opportunity for success.</p>
+                <p>
+                    Limbr helps you to monitor your progress towards freedom from back pain and success to a healthier life. A suite of applications make it easy for you to follow your care plan, report your daily progress and set backs to your care team, and receive personalized coaching to give you the best opportunity for success.
+                </p>
 
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
@@ -342,7 +354,8 @@
             <div class="col-sm-6">
                 <h3><a>YADL</h3>
 
-                <p>Your Activities of Daily Living (YADL) is an image-based survey for patients with arthritis. It uses images of Activities of Daily Living (ADLs) to improve patients' experience. The interface possesses several added benefits: wider coverage of ADLs, engaged and personalized experience, and accurate capture of individual health situations. YADL holds the promise for improving the efficacy of reporting ADLs and enhancing doctor-patient communications.
+                <p>
+                    Your Activities of Daily Living (YADL) is an image-based survey for patients with arthritis. It uses images of Activities of Daily Living (ADLs) to improve patients' experience. The interface possesses several added benefits: wider coverage of ADLs, engaged and personalized experience, and accurate capture of individual health situations. YADL holds the promise for improving the efficacy of reporting ADLs and enhancing doctor-patient communications.
                 </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
@@ -384,91 +397,35 @@
         </div>
     </div>
 </section>
-<section class="content-17 v-center">
-    <div>
-        <div class="container">
-            <h3><img src="startup/common-files/icons/Pushcart.png" height="200" alt=""></h3>
-                            <div id="c-17_myCarousel" class="carousel slide">
-                <div>
-                    <div>
-                    <p>
-                        Fully integrated into online grocery services Instacart, FreshDirect, and Peapod, Pushcart is an small data email service helping users define nutritional goals and providing direct feedback on how their grocery purchases support their personal health goals.
-                    </p>
-                    <p>
-                        Pushcart works seamlessly with your online grocery service to analyze your purchases and map them to your personal health goals. No receipt scanning, no apps to install. Just clear insights and tips on achieving your health goals delivered straight to your email inbox.
-                    </p>
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a href="pushcart.html">PushCart</a></h3>
+                <img src="startup/common-files/icons/Pushcart.png" style="height: 50px">
+
+                <p>
+                    Fully integrated into online grocery services Instacart, FreshDirect, and Peapod, Pushcart is an small data email service helping users define nutritional goals and providing direct feedback on how their grocery purchases support their personal health goals.
+                </p>
+                <p>
+                    Pushcart works seamlessly with your online grocery service to analyze your purchases and map them to your personal health goals. No receipt scanning, no apps to install. Just clear insights and tips on achieving your health goals delivered straight to your email inbox.
+                </p>
+
+                </p>
+
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src=""  alt="">
+                                </div>
                     </div>
                 </div>
             </div>
-              <a href="http://gopushcart.com">gopushcart.com</a>
-        </div>
-    </div>
-</section><section class="content-30">
-    <div class="container">
-        <div class="row features">
-            <div align="center">
-            <img src="startup/common-files/icons/email@2x.png" width="200" height="200" alt="">
-            </div>
-            <br/>
-            <h3> Let's take a quick walkthrough Pushcart's email experience.
-            </h3>
-            <br/>
-            <div class="col-sm-3 box-1">
-                <div class="description-top">
-                    <h6>1. Set Your Goal</h6>
-                    You set your nutritional and health goals around your eating habits.
-                    <img src="startup/common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
-                        </div>
-                <div class="img">
-                    <img src="startup/common-files/img/content/goal-bw@2x.png" width="220" height="391" alt="">
-                        <img src="startup/common-files/img/content/goal@2x.png" width="220" height="391" alt="">
-                            </div>
-                <div class="description-bottom">
-                    <h6>and Calibrate Pushcart to Your Household</h6>
-                    By sharing some basic but important details about your household, Pushcart gets smarter in its feedback and recommendations.
-                    <img src="startup/common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
-                        </div>
-            </div>
-            <div class="col-sm-3 box-2">
-                <div class="description-top">
-                    <h6>2. Easy to use</h6>
-                    With a personal custom Pushcart e-mail, autoforwarding your order emails is a snap.
-                    <img src="startup/common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
-                        </div>
-                <div class="img">
-                    <img src="startup/common-files/img/content/email-bw@2x.png" width="220" height="391" alt="">
-                        <img src="startup/common-files/img/content/email@2xc-30.png" width="220" height="391" alt="">
-                            </div>
 
-            </div>
-            <div class="col-sm-3 box-3">
-                <div class="description-top">
-                    <h6>3. Effortless e-mail Reciept Handling</h6>
-                    With your Pushcart e-mail setup, your receipts are processed seamlessly and effortlessly.
-                    <img src="startup/common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
-                        </div>
-                <div class="img">
-                    <img src="startup/common-files/img/content/instacart-bw@2x.png" width="220" height="391" alt="">
-                        <img src="startup/common-files/img/content/instacart@2x.png" width="220" height="391" alt="">
-                            </div>
-                <div class="description-bottom">
-                        </div>
-            </div>
-            <div class="col-sm-3 box-4">
-                <div class="description-top">
-                    <h6>4. Clear Feedback</h6>
-                 Get clear data analysis and feedback on your grocery purchases and how well they map to your health goals.
-                    <img src="startup/common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
-                        </div>
-                <div class="img">
-                    <img src="startup/common-files/img/content/feedback-bw@2x.png" width="220" height="391" alt="">
-                        <img src="startup/common-files/img/content/feedback@2x.png" width="220" height="391" alt="">
-                            </div>
-                <div class="description-bottom">
-
-                        </div>
-            </div>
         </div>
+
     </div>
 </section>
 <section class="content-10">
@@ -477,8 +434,8 @@
             <div class="col-sm-6">
                 <h3><a href="http://bit.ly/plateclick">PlateClick</a></h3>
                 <img src="startup/common-files/img/content/PlateClick.png" class="img-responsive" style="height: 3em;">
-
-                <p>PlateClick is a novel system for efficient food preference elicitation using a simple, visual quiz-based user interface. We leverage a pairwise comparison approach with only visual content and propose a CNN based online learning framework that learns users' preferences across a large scale dataset based on a small number of interactions. The online learning framework could be used to enhance the interplay between human hedonic and content similarities in solving general human-in-the-loop problems. We envision that PlateClick could be used to capture personal diet profiles and fuel a wide range of applications in healthcare and commercial recommender systems.
+                <p>
+                    PlateClick is a novel system for efficient food preference elicitation using a simple, visual quiz-based user interface. We leverage a pairwise comparison approach with only visual content and propose a CNN based online learning framework that learns users' preferences across a large scale dataset based on a small number of interactions. The online learning framework could be used to enhance the interplay between human hedonic and content similarities in solving general human-in-the-loop problems. We envision that PlateClick could be used to capture personal diet profiles and fuel a wide range of applications in healthcare and commercial recommender systems.
                 </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
@@ -505,10 +462,11 @@
             <div class="col-sm-6">
                 <h3><a href="https://eaf.smalldata.io">EAF/Reddit</a></h3>
 
-                <p>The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
+                <p>
+                    The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
                 </p>
                 <p>
-                The EAF analysis core is being updated to make use of large public corpora of conversational text, specifically the recently-released <a href="https://archive.org/details/2015_reddit_comments_corpus">reddit corpus</a>, in order to robustly train models that can then be applied to sparse personal text streams such as email.
+                    The EAF analysis core is being updated to make use of large public corpora of conversational text, specifically the recently-released <a href="https://archive.org/details/2015_reddit_comments_corpus">reddit corpus</a>, in order to robustly train models that can then be applied to sparse personal text streams such as email.
                 </p>
 
                 <p><a href="https://eaf.smalldata.io">Check it out!</a></p>
@@ -548,7 +506,8 @@
             <div class="col-sm-6">
                 <h3><a href="http://smalldata.io/ohmage-omh-website">ohmage-omh</a></h3>
 
-                <p>ohmage-omh is an open-source, open-architecture, mobile health platform intended for rapid prototyping and piloting of mobile health applications. Participants of studies run specified mobile applications on their smartphone (Android 3.0.x+ and iOS ). A data storage unit securely stores the information from the participant under their separate account. ohmage-omh supports Open mHealth (omh) read and write APIs. The Admin dashboard retrieves data from the database using the omh read API in accordance with the access credentials of the logged-in user.
+                <p>
+                    ohmage-omh is an open-source, open-architecture, mobile health platform intended for rapid prototyping and piloting of mobile health applications. Participants of studies run specified mobile applications on their smartphone (Android 3.0.x+ and iOS ). A data storage unit securely stores the information from the participant under their separate account. ohmage-omh supports Open mHealth (omh) read and write APIs. The Admin dashboard retrieves data from the database using the omh read API in accordance with the access credentials of the logged-in user.
                 </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
