--- a/index.html
+++ b/index.html
@@ -403,15 +403,15 @@
               <a href="http://gopushcart.com">gopushcart.com</a>
         </div>
     </div>
-</section><section class="content-30">
+</section>
+<section class="content-30">
     <div class="container">
         <div class="row features">
             <div align="center">
             <img src="startup/common-files/icons/email@2x.png" width="200" height="200" alt="">
             </div>
             <br/>
-            <h3> Let's take a quick walkthrough Pushcart's email experience.
-            </h3>
+            <h3> Let's take a quick walkthrough Pushcart's email experience.</h3>
             <br/>
             <div class="col-sm-3 box-1">
                 <div class="description-top">
@@ -493,51 +493,7 @@
         </div>
     </div>
 </section>
-
 <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
-<section class="content-10">
-    <div class="container">
-         <div class="row">
-            <div class="col-sm-10 col-sm-offset-1">
-                <h2>Personal Analytics</h2>
-            </div>
-        </div>
-            <div class="col-sm-6">
-                <h3><a href="https://eaf.smalldata.io">EAF/Reddit</a></h3>
-
-                <p>The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
-                </p>
-                <p>
-                The EAF analysis core is being updated to make use of large public corpora of conversational text, specifically the recently-released <a href="https://archive.org/details/2015_reddit_comments_corpus">reddit corpus</a>, in order to robustly train models that can then be applied to sparse personal text streams such as email.
-                </p>
-
-                <p><a href="https://eaf.smalldata.io">Check it out!</a></p>
-            </div>
-            <div class="col-sm-5 col-sm-offset-1 text-center">
-                <div id="c-10_myCarousel" class="carousel slide">
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
-                                </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="content-10">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <h3><a>StudentLifeMaps</a></h3>
-
-                <p>Coming Soon!</p>
-            </div>
-        </div>
-    </div>
-</section>
-<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
-
 <section class="content-10">
     <div class="container">
          <div class="row">
@@ -593,7 +549,48 @@
         </div>
     </div>
 </section>
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+         <div class="row">
+            <div class="col-sm-10 col-sm-offset-1">
+                <h2>Personal Analytics</h2>
+            </div>
+        </div>
+            <div class="col-sm-6">
+                <h3><a>EAF/Reddit</a></h3>
 
+                <p>The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
+                </p>
+                <p>
+                The EAF analysis core is being updated to make use of large public corpora of conversational text, specifically the recently-released <a href="https://archive.org/details/2015_reddit_comments_corpus">reddit corpus</a>, in order to robustly train models that can then be applied to sparse personal text streams such as email.
+                </p>
+
+                <p><a>Check it out!</a></p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a>StudentLifeMaps</a></h3>
+
+                <p>Coming Soon!</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
 <section class="crew-2" id="team">
