--- a/index.html
+++ b/index.html
@@ -411,21 +411,17 @@
                     Pushcart works seamlessly with your online grocery service to analyze your purchases and map them to your personal health goals. No receipt scanning, no apps to install. Just clear insights and tips on achieving your health goals delivered straight to your email inbox.
                 </p>
 
-                </p>
-
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src=""  alt="">
+                            <img src="startup/common-files/img/content/cartresized.png"  alt="">
                                 </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
     </div>
 </section>
 <section class="content-10">
