changed unlinked titles' color

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a>YADL</h3>
+                <h3>YADL</h3>
 
                 <p>
                     Your Activities of Daily Living (YADL) is an image-based survey for patients with arthritis. It uses images of Activities of Daily Living (ADLs) to improve patients' experience. The interface possesses several added benefits: wider coverage of ADLs, engaged and personalized experience, and accurate capture of individual health situations. YADL holds the promise for improving the efficacy of reporting ADLs and enhancing doctor-patient communications.
@@ -511,7 +511,7 @@
             </div>
         </div>
             <div class="col-sm-6">
-                <h3><a>EAF/Reddit</a></h3>
+                <h3>EAF/Reddit</h3>
 
                 <p>The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
                 </p>
@@ -537,7 +537,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a>StudentLifeMaps</a></h3>
+                <h3>StudentLifeMaps</h3>
 
                 <p>Coming Soon!</p>
             </div>
