--- a/index.html
+++ b/index.html
@@ -512,8 +512,9 @@
         </div>
             <div class="col-sm-6">
                 <h3>EAF/Reddit</h3>
+                <p>Coming Soon!</p>
 
-                <p>The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
+                <!---<p>The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
                 </p>
                 <p>
                 The EAF analysis core is being updated to make use of large public corpora of conversational text, specifically the recently-released <a href="https://archive.org/details/2015_reddit_comments_corpus">reddit corpus</a>, in order to robustly train models that can then be applied to sparse personal text streams such as email.
@@ -525,7 +526,7 @@
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                            <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
                                 </div>
                     </div>
                 </div>
