updated yadl link

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3>YADL</h3>
+                <h3><a href="http://yadl.smalldata.io/">YADL</a></h3>
 
                 <p>
                     Your Activities of Daily Living (YADL) is an image-based survey for patients with arthritis. It uses images of Activities of Daily Living (ADLs) to improve patients' experience. The interface possesses several added benefits: wider coverage of ADLs, engaged and personalized experience, and accurate capture of individual health situations. YADL holds the promise for improving the efficacy of reporting ADLs and enhancing doctor-patient communications.
