Remove Mobility logo

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="startup/common-files/img/content/limbr-diag copy.png"  alt="">
+                            <img src="startup/common-files/img/content/limbr-diag.png"  alt="">
                                 </div>
                     </div>
                 </div>
