--- a/index.html
+++ b/index.html
@@ -662,6 +662,16 @@
                     </div>
                 </div>
             </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/neil_l.jpg" alt=""></div>
+                    </div>
+                    <div class="info">
+                        Neil Lakin
+                    </div>
+                </div>
+            </div>
         </div>
 
         <br/>
