--- a/index.html
+++ b/index.html
@@ -662,6 +662,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class=members">
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
@@ -669,6 +671,28 @@
                     </div>
                     <div class="info">
                         Neil Lakin
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        <br/>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        <br/>
+                        <br/>
                     </div>
                 </div>
             </div>
