--- a/index.html
+++ b/index.html
@@ -665,6 +665,7 @@
         </div>
         <div class=members">
             <div class="member-wrapper">
+            	<div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
                         <div><img src="startup/common-files/img/crew/neil_l.jpg" alt=""></div>
@@ -672,6 +673,7 @@
                     <div class="info">
                         Neil Lakin
                     </div>
+                </div>
                 </div>
             </div>
             <div class="member-wrapper">
