--- a/index.html
+++ b/index.html
@@ -663,17 +663,18 @@
                 </div>
             </div>
         </div>
-        <div class=members">
+        <div class="members">
             <div class="member-wrapper">
-            	<div class="member-wrapper">
-                <div class="member">
-                    <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/neil_l.jpg" alt=""></div>
+                <div class="member-wrapper">
+                    <div class="member">
+                        <div class="photo-wrapper">
+                            <div><img src="startup/common-files/img/crew/neil_l.jpg" alt=""></div>
+
+                        </div>
+                        <div class="info">
+                            Neil Lakin
+                        </div>
                     </div>
-                    <div class="info">
-                        Neil Lakin
-                    </div>
-                </div>
                 </div>
             </div>
             <div class="member-wrapper">
@@ -699,6 +700,7 @@
                 </div>
             </div>
         </div>
+        
 
         <br/>
         <h5> PhD Students</h5>
