updated PlateClick's link

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="http://bit.ly/plateclick">PlateClick</a></h3>
+                <h3><a href="http://52.36.143.110:5000/">PlateClick</a></h3>
                 <img src="startup/common-files/img/content/PlateClick.png" class="img-responsive" style="height: 3em;">
                 <p>
                     PlateClick is a novel system for efficient food preference elicitation using a simple, visual quiz-based user interface. We leverage a pairwise comparison approach with only visual content and propose a CNN based online learning framework that learns users' preferences across a large scale dataset based on a small number of interactions. The online learning framework could be used to enhance the interplay between human hedonic and content similarities in solving general human-in-the-loop problems. We envision that PlateClick could be used to capture personal diet profiles and fuel a wide range of applications in healthcare and commercial recommender systems.
