--- a/index.html
+++ b/index.html
@@ -433,6 +433,11 @@
                 <p>
                     PlateClick is a novel system for efficient food preference elicitation using a simple, visual quiz-based user interface. We leverage a pairwise comparison approach with only visual content and propose a CNN based online learning framework that learns users' preferences across a large scale dataset based on a small number of interactions. The online learning framework could be used to enhance the interplay between human hedonic and content similarities in solving general human-in-the-loop problems. We envision that PlateClick could be used to capture personal diet profiles and fuel a wide range of applications in healthcare and commercial recommender systems.
                 </p>
+
+                <img src="http://www.yumme.biz/img/yumme.png" class="img-responsive" style="height: 4em;">
+                 <p>
+                    Built on PlateClick, <a href= "http://www.yumme.biz/" >Yum-me</a> is a personalized healthy meal recommender system designed to meet individuals’ health goals, dietary restrictions, and fine-grained food preferences.
+                </p>                
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
                 <div id="c-10_myCarousel" class="carousel slide">
